v3.5.0 (2025-??-??)
 * MIDI Polyphonic Expression (MPE) is now supported.
 * Bugfix: avoid potential crash in hosts which fail to provide the requested
   auxiliary input.
 * New presets:
    * Analog Brass AT MPE, Analog Brass mod MPE, Expressive Saw MPE:
      MPE-friendly versions of the respective presets,
    * Crystal Bowl, Metal Bowl, and Metal Bowl Bright: relaxing singing bowl
      sounds where note velocity selects between a struck bowl that rings out
      and fades, and one that keeps resonating continuously as if a mallet was
      circling its rim.

v3.4.1 (2025-01-25)
 * Bugfix: since v3.3.0, oscillator 1 went silent whenever the modulator
   additive volume parameter was being changed or controlled by an LFO. This
   has been fixed (https://github.com/attilammagyar/js80p/issues/35).
 * Bugfix: in the Stalacpipe Organ preset, subsequent notes could affect the
   pitch of already scheduled water droplet sounds which could lead to
   unnatural sounds when very high and very low notes were alternating. Now
   once scheduled, water droplets will maintain their pitch regardless of
   subsequent notes.
 * Bugfix: the VST 3 plugin used to ignore certain requests by the host to
   clear its state and echo and reverb buffers
   (https://github.com/attilammagyar/js80p/issues/34).

v3.4.0 (2025-01-12)
 * Oscillators can now be mixed with noise.
 * The Echo and Reverb effects can now be gated by switching their side-chain
   compression into expansion mode.
 * Add a basic Tape simulation effect for slow-down stops, lo-fi wow and
   flutter, saturation and tone coloring, etc.
 * New presets:
    * FX Master Enhancer, a preset for using JS80P as a master bus effect
      rather than a synthesizer.
    * Creepy Wind for making eerie wind sound Foley effects.
    * Stalacpipe Organ, the sound of the largest musical instrument in the
      world.
 * Bugfix: fixed the positioning of the distortion type selectors on the user
   interface.

v3.3.0 (2024-12-11)